# citas-vardi

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  server_service.bat  tasks_service.bat  urls.py
capnet_apps/: settings.py  urls.py
citas_dinissan/: admin.py  apps.py  coreapi.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
citas_dinissan/management/commands/: citas_crear_tareas.py
citas_dinissan/migrations/: 0001_initial.py  0002_alter_actividadescitas_options_and_more.py  0003_agenciatablero.py  0004_fallasintoma_motivoingreso.py  0005_actividadescitas_id_agencia.py  0006_motivoingresomazda.py  0007_actividadescitas_no_cita_vardi_and_more.py
citas_dinissan/templates/citas_dinissan/: base.html  cliente_cancelar_cita.html  cliente_nueva_cita.html  cliente_reagendar_cita.html  correo_cancelar.html  correo_notificacion.html  login.html  manual.html
static/citas_dinissan/css/: neutron.css
static/js/: script.js
templates/: Anulados.html  Calendar.html  Captura.html  CapturaReasignamiento.html  DetalleClienteNuevo.html  OperativoAnfitrion.html  OperativoAsesor.html  ReportesEventos.html  Reports.html  Tiempos.html  nav.html
tracker_pro_toyota_mx/: admin.py  apps.py  coreapi.py  models.py  urls.py  utils.py  views.py
tracker_pro_toyota_mx/migrations/: 0001_initial.py
tracker_pro_toyota_mx/static/tracker_pro_toyota_mx/css/: neutron.css  progress_wizard.css
tracker_pro_toyota_mx/templates/tracker_pro_toyota_mx/: 404.html  500.html  base.html  cliente.html  login.html  prediagnostico.html  preinventario.html
